# criticality-torch

./: README.md
pkg/criticality/: DESCRIPTION  LICENSE  NAMESPACE
pkg/criticality-torch/R/: model.R  nn.R
pkg/criticality/R/: bn.R  model.R  nn.R  plot.R  risk.R  scale.R  tabulate.R
pkg/criticality/man/: Model.Rd  NN.Rd
python/: Makefile  README.md  convert_rdata.R  environment.yml  pyproject.toml
python/criticality/: __init__.py  __main__.py  bn.py  ensemble.py  model.py  nn.py  plot.py  predict.py  risk.py  scale.py  simulate.py  tabulate.py
python/scripts/: download_data.sh  setup_wsl.sh  verify_openmc.py
python/tests/: test_smoke.py
